Added references according to Onion Architecture dependencies.

--- a/src/Infrastructure/project.json
+++ b/src/Infrastructure/project.json
@@ -1,7 +1,10 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Application": "1.0.0-*",
+    "Core": "1.0.0-*",
+    "Domain": "1.0.0-*",
     "NETStandard.Library": "1.6.0"
   },
 
