Added dependency resolver and configuration adapter.

--- a/src/Infrastructure.Web/packages.config
+++ b/src/Infrastructure.Web/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="1.4.3" targetFramework="net462" />
+  <package id="Nancy.Bootstrappers.StructureMap" version="1.4.3" targetFramework="net462" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net462" />
+  <package id="StructureMap" version="4.4.3" targetFramework="net462" />
 </packages>
