--- a/src/Infrastructure.DependencyResolution/Infrastructure.DependencyResolution.csproj
+++ b/src/Infrastructure.DependencyResolution/Infrastructure.DependencyResolution.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3DC90B3B-C842-4B49-8FD9-48DED989A607}</ProjectGuid>
+    <ProjectGuid>{50848BD5-EB16-44E9-8183-2D9739B343F1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Infrastructure</RootNamespace>
-    <AssemblyName>Infrastructure</AssemblyName>
+    <RootNamespace>Infrastructure.DependencyResolution</RootNamespace>
+    <AssemblyName>Infrastructure.DependencyResolution</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,14 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap, Version=4.4.3.564, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StructureMap.4.4.3\lib\net45\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\ConfigurationAdapter.cs" />
-    <Compile Include="Configuration\IConfigurationAdapter.cs" />
-    <Compile Include="IBaseFactory.cs" />
+    <Compile Include="DependencyRegistry.cs" />
+    <Compile Include="Factories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj">
@@ -52,9 +58,10 @@
       <Project>{dd179094-4899-4efd-955a-5d4b5283f38f}</Project>
       <Name>Domain</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
+      <Project>{3dc90b3b-c842-4b49-8fd9-48ded989a607}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
