--- a/src/Infrastructure.Web/packages.config
+++ b/src/Infrastructure.Web/packages.config
@@ -3,5 +3,8 @@
   <package id="Nancy" version="1.4.3" targetFramework="net462" />
   <package id="Nancy.Bootstrappers.StructureMap" version="1.4.3" targetFramework="net462" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net462" />
+  <package id="NLog" version="4.4.4" targetFramework="net462" />
+  <package id="NLog.Config" version="4.4.4" targetFramework="net462" />
+  <package id="NLog.Schema" version="4.4.4" targetFramework="net462" />
   <package id="StructureMap" version="4.4.3" targetFramework="net462" />
 </packages>
