--- a/tests/Infrastructure.UnitTests/Infrastructure.UnitTests.csproj
+++ b/tests/Infrastructure.UnitTests/Infrastructure.UnitTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A0FAB1E-2923-4D78-98A6-867CBC46343B}</ProjectGuid>
+    <ProjectGuid>{9084B2AB-217F-4315-BD03-92A748D3AC59}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Application.UnitTests</RootNamespace>
-    <AssemblyName>Application.UnitTests</AssemblyName>
+    <RootNamespace>Infrastructure.UnitTests</RootNamespace>
+    <AssemblyName>Infrastructure.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,13 +49,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj">
-      <Project>{f0041627-8ecf-404d-834f-281f105d8eb3}</Project>
-      <Name>Application</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj">
+      <Project>{3dc90b3b-c842-4b49-8fd9-48ded989a607}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
